--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,9 @@ dependencies {
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.2'
+    compile 'com.github.traex.rippleeffect:library:1.3'
     testCompile 'junit:junit:4.12'
-    androidTestCompile ('com.android.support.test.espresso:espresso-core:3.0.2', {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
