--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
     </activity>
     <activity android:name=".GameMenuActivity">
     </activity>
+    <activity android:name=".NewGameActivity">
+    </activity>
+    <activity android:name=".HelpActivity">
+    </activity>
   </application>
 
 </manifest>
