--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="edu.cnm.deepdive.emojipets">
 
+  <!-- To auto-complete the email text field in the login form with the user's emails -->
+  <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+  <uses-permission android:name="android.permission.READ_PROFILE"/>
+  <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
@@ -19,11 +24,7 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".GameMenuActivity">
-    </activity>
-    <activity android:name=".NewGameActivity">
-    </activity>
-    <activity android:name=".HelpActivity">
+    <activity android:name=".SignInActivity">
     </activity>
     <activity android:name=".PetActivity">
       <intent-filter>
@@ -31,6 +32,10 @@
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+    </activity>
+    <activity
+      android:label="@string/title_activity_login"
+      android:name=".LoginActivity">
     </activity>
   </application>
 
