--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.2'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.google.android.gms:play-services-auth:15.0.1'
+    compile 'com.google.code.gson:gson:2.8.5'
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.4.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
