--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
   <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
   <application
+    android:name="edu.cnm.deepdive.emojipets.EmojiPetApplication"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
@@ -17,18 +18,14 @@
     <activity
       android:label="@string/app_name"
       android:name=".MainActivity"
-      android:theme="@style/AppTheme.NoActionBar">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
-    <activity android:name=".SignInActivity">
-    </activity>
+      android:theme="@style/AppTheme.NoActionBar"/>
     <activity
       android:label="@string/title_activity_login"
-      android:name=".LoginActivity">
+      android:name="edu.cnm.deepdive.emojipets.SignInActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
     </activity>
   </application>
 
