--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
   <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
   <uses-permission android:name="android.permission.READ_PROFILE"/>
   <uses-permission android:name="android.permission.READ_CONTACTS"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
     android:name="edu.cnm.deepdive.emojipets.EmojiPetApplication"
@@ -17,7 +18,7 @@
     android:theme="@style/AppTheme">
     <activity
       android:label="@string/app_name"
-      android:name=".MainActivity"
+      android:name="edu.cnm.deepdive.emojipets.MainActivity"
       android:theme="@style/AppTheme.NoActionBar"/>
     <activity
       android:label="@string/title_activity_login"
