--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,29 @@
   <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
-    android:name="edu.cnm.deepdive.emojipets.EmojiPetApplication"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
+    android:name=".EmojiPetApplication"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity
       android:label="@string/app_name"
-      android:name="edu.cnm.deepdive.emojipets.MainActivity"
+      android:name=".MainActivity"
       android:theme="@style/AppTheme.NoActionBar"/>
     <activity
       android:label="@string/title_activity_login"
-      android:name="edu.cnm.deepdive.emojipets.SignInActivity">
+      android:name=".SignInActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
+
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+    </activity>
+    <activity
+      android:label="@string/create_account"
+      android:name=".CreateAccountActivity">
     </activity>
   </application>
 
