--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,14 @@
     </activity>
     <activity
       android:label="@string/create_account"
-      android:name=".CreateAccountActivity">
+      android:name=".CreateAccountActivity"
+      android:parentActivityName=".SignInActivity">
+      <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+    </activity>
+    <activity
+      android:label="@string/title_activity_create_account_basic_test"
+      android:name=".CreateAccountBasicActivityTest"
+      android:theme="@style/AppTheme">
     </activity>
   </application>
 
