I'm over halfway through connecting views of follows to the user account, so users can go brows their follows' pets.  I used a bottom nav activity and a fragment for the follow pet so it will be easy to create a wall for the friends that can be updated like the original facebook wall.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,13 @@
       android:label="@string/create_account"
       android:name=".CreateAccountActivity"
       android:parentActivityName=".SignInActivity">
-      <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+
+      <!-- android:theme="@style/ThemeOverlay.AppCompat.ActionBar" -->
     </activity>
     <activity
-      android:label="@string/title_activity_create_account_basic_test"
-      android:name=".CreateAccountBasicActivityTest"
-      android:theme="@style/AppTheme">
+      android:label="@string/title_activity_friend"
+      android:name=".FriendActivity"
+      android:parentActivityName=".MainActivity">
     </activity>
   </application>
 
