I have connected the follow views so that users can interact with followers and following from a new activity that allows them to see the pet and it's health points in a bottom nav activity.  In addition to the pet view, there is a wall view, where users can write funny things in an EditText and change the other player's wall.  It's an implementation of the original facebook wall.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
       android:name=".MainActivity"
       android:theme="@style/AppTheme.NoActionBar"/>
     <activity
+      android:windowSoftInputMode="adjustResize"
       android:label="@string/title_activity_login"
       android:name=".SignInActivity">
       <intent-filter>
@@ -30,6 +31,7 @@
       </intent-filter>
     </activity>
     <activity
+      android:windowSoftInputMode="adjustResize"
       android:label="@string/create_account"
       android:name=".CreateAccountActivity"
       android:parentActivityName=".SignInActivity">
@@ -37,6 +39,7 @@
       <!-- android:theme="@style/ThemeOverlay.AppCompat.ActionBar" -->
     </activity>
     <activity
+      android:windowSoftInputMode="adjustResize"
       android:label="@string/title_activity_friend"
       android:name=".FriendActivity"
       android:parentActivityName=".MainActivity">
