--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
     compile 'com.squareup.retrofit2:converter-gson:2.4.0'
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
-
+    compile 'com.airbnb.android:lottie:2.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.github.varunest:sparkbutton:1.0.5'
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.2', {
