--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
       android:name=".FriendActivity"
       android:parentActivityName=".MainActivity">
     </activity>
+
+    <meta-data
+      android:name="preloaded_fonts"
+      android:resource="@array/preloaded_fonts"/>
   </application>
 
 </manifest>
