--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -30,7 +33,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.2'
     compile 'com.github.traex.rippleeffect:library:1.3'
-    compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.android.support:cardview-v7:26.+'
     compile 'com.google.android.gms:play-services-auth:15.0.1'
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
